--- a/docs/guides/capabilities/screensharing/enabling.mdx
+++ b/docs/guides/capabilities/screensharing/enabling.mdx
@@ -260,7 +260,7 @@ meeting = await ProductDBClient.init({
 <TabItem value="react" label="React">
 
 ```js
-const [meeting, initMeeting] = useProductDBClient();
+const [meeting, initMeeting] = useDyteClient();
 
 const join = () => {
   initMeeting({
