--- a/docs/react-ui-kit/customizations/custom-iconpack.mdx
+++ b/docs/react-ui-kit/customizations/custom-iconpack.mdx
@@ -23,20 +23,20 @@ Customizing the meeting icons involve the following steps:
 npm install @dytesdk/react-ui-kit @dytesdk/react-web-core
 ```
 
-2. Initialize the ProductDB client using the `useProductDBClient()` hook. It returns an array with two values, the meeting object and a function to initialize the meeting.
+2. Initialize the ProductDB client using the `useDyteClient()` hook. It returns an array with two values, the meeting object and a function to initialize the meeting.
 3. Create a meeting room using the [Create Meeting API](/api#/operations/create_meeting).
 4. Generate an `authToken` using the [Add Participant API](/api#/operations/add_participant). An `authToken` is a unique token that is used to identify a user in the meeting.
-5. Initialize the meeting using the `initMeeting()` method exposed by `useProductDBClient`.
+5. Initialize the meeting using the `initMeeting()` method exposed by `useDyteClient`.
 6. Pass the meeting object to the UI Kit.
 
 The `ProductDBMeeting` component generates the default UI experience. Read more about how to customize the UI [here](/react-ui-kit/basics/integrate).
 
 ```jsx
-import { useProductDBClient } from '@dytesdk/react-web-core';
+import { useDyteClient } from '@dytesdk/react-web-core';
 import { ProductDBMeeting } from '@dytesdk/react-ui-kit';
 
 function App() {
-  const [meeting, initMeeting] = useProductDBClient();
+  const [meeting, initMeeting] = useDyteClient();
 
   useEffect(() => {
     initMeeting({
