--- a/docs/react-web-core/introduction.mdx
+++ b/docs/react-web-core/introduction.mdx
@@ -14,7 +14,7 @@ The Core SDK acts as a data-only layer, offering high-level primitives and abstr
 
 [React Hooks](https://beta.reactjs.org/reference/react) are functions that allow developers to manage state and other React features in functional components. Hooks were introduced in React version 16.8 as a way to simplify the code. ProductDB provides the following built-in hooks:
 
-  - useProductDBClient()
+  - useDyteClient()
   - useProductDBMeeting()
   - useProductDBSelector()
 
