--- a/docs/react-web-core/quickstart.mdx
+++ b/docs/react-web-core/quickstart.mdx
@@ -41,7 +41,7 @@ To start, we need to initialize the libraries and wrap the application in the `<
 
 The `<ProductDBProvider />` provides the necessary context for the various hooks to consume the `meeting` object as per their purpose. ProductDB provides the following built-in hooks for your usage:
 
-- `useProductDBClient()`
+- `useDyteClient()`
 - `useProductDBMeeting()`
 - `useProductDBSelector()`
 
@@ -50,11 +50,11 @@ For more information on hooks, see [Use Web Core Hooks](/react-ui-kit/using-hook
 To initialize, call the `init()` method and pass the `authToken`. You can get the `authToken` using the [Add Participant API](/api#/operations/add_participant).
 
 ```jsx
-import { ProductDBProvider, useProductDBClient } from '@dytesdk/react-web-core';
+import { ProductDBProvider, useDyteClient } from '@dytesdk/react-web-core';
 import { useEffect } from 'react';
 
 export default function App() {
-  const [meeting, initMeeting] = useProductDBClient();
+  const [meeting, initMeeting] = useDyteClient();
 
   useEffect(() => {
     initMeeting({
