--- a/docs/rn-ui-kit/using-hooks.mdx
+++ b/docs/rn-ui-kit/using-hooks.mdx
@@ -24,10 +24,10 @@ It is a simple context provider providing the meeting object to child
 components.
 
 ```jsx
-import { useProductDBClient } from '@dytesdk/react-native-core';
+import { useDyteClient } from '@dytesdk/react-native-core';
 
 function App() {
-  const [meeting, initMeeting] = useProductDBClient();
+  const [meeting, initMeeting] = useDyteClient();
 
   useEffect(() => {
     const init = async () => {
@@ -57,11 +57,11 @@ It is a simple context provider providing the productdb design system to child
 components.
 
 ```jsx
-import { useProductDBClient } from '@dytesdk/react-native-core';
+import { useDyteClient } from '@dytesdk/react-native-core';
 import { ProductDBUIProvider, ProductDBMeeting } from '@dytesdk/react-native-ui-kit';
 
 export default function App() {
-  const [meeting, initMeeting] = useProductDBClient();
+  const [meeting, initMeeting] = useDyteClient();
 
   useEffect(() => {
     const init = async () => {
